--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,25 +1,33 @@
 // monument
 
 @font-face {
-  src: url("../assets/fonts/MonumentExtended-Ultralight.otf") format("opentype");
+  src: url("../assets/fonts/MonumentExtended-Ultralight.woff") format("woff"),
+    url("../assets/fonts/MonumentExtended-Ultralight.woff2") format("woff2"),
+    url("../assets/fonts/MonumentExtended-Ultralight.otf") format("opentype");
   font-family: "Monument";
   font-weight: 300;
 }
 
 @font-face {
-  src: url("../assets/fonts/MonumentExtended-Regular.otf") format("opentype");
+  src: url("../assets/fonts/MonumentExtended-Regular.woff") format("woff"),
+    url("../assets/fonts/MonumentExtended-Regular.woff2") format("woff2"),
+    url("../assets/fonts/MonumentExtended-Regular.otf") format("opentype");
   font-family: "Monument";
   font-weight: normal;
 }
 
 @font-face {
-  src: url("../assets/fonts/MonumentExtended-Bold.otf") format("opentype");
+  src: url("../assets/fonts/MonumentExtended-Bold.woff") format("woff"),
+    url("../assets/fonts/MonumentExtended-Bold.woff2") format("woff2"),
+    url("../assets/fonts/MonumentExtended-Bold.otf") format("opentype");
   font-family: "Monument";
   font-weight: bold;
 }
 
 @font-face {
-  src: url("../assets/fonts/MonumentExtended-Ultrabold.otf") format("opentype");
+  src: url("../assets/fonts/MonumentExtended-Ultrabold.woff") format("woff"),
+    url("../assets/fonts/MonumentExtended-Ultrabold.woff2") format("woff2"),
+    url("../assets/fonts/MonumentExtended-Ultrabold.otf") format("opentype");
   font-family: "Monument";
   font-weight: 700;
   font-style: normal;
@@ -204,20 +212,4 @@
   font-family: "Bw";
   font-weight: 900;
   font-style: italic;
-}
-
-// neue montreal
-
-@font-face {
-  src: url("../assets/fonts/neue-montreal/NeueMontreal-Regular.otf")
-    format("opentype");
-  font-family: "NeueMontreal";
-  font-weight: bold;
-}
-
-@font-face {
-  src: url("../assets/fonts/neue-montreal/NeueMontreal-Bold.otf")
-    format("opentype");
-  font-family: "NeueMontreal";
-  font-weight: normal;
 }
